--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:type" content="website">
   <title>Pixels & Predictions 2025</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="google-site-verification" content="UsPAY_Wlo2yhMIuQFX2Xtm6hRZI1pt3WGq7Od3Diq0g" />
 </head>
 <body>
 <header class="bg-dark text-white text-center py-5">
