--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   <title>Pixels & Predictions 2025</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <meta name="google-site-verification" content="UsPAY_Wlo2yhMIuQFX2Xtm6hRZI1pt3WGq7Od3Diq0g" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G2XL9X87T4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G2XL9X87T4');
+  </script>
+
 </head>
 <body>
 <header class="bg-dark text-white text-center py-5">
